objects/Question__c.object
<CustomObject>
    <description>Houses data for Digigraph survey Questions</description>
    <fields>
        <fullName>Animal_Count_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if this question should update the Animal Count detail on the lead and account.</description>
        <inlineHelpText>This field should be checked if the answer to this question should update the Animal Count detail on the lead record or associated with the account.</inlineHelpText>
        <label>Animal Count Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <description>Category of animal type for question</description>
        <label>Animal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Flock</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>University/Recruiting</fullName>
                </value>
                <value>
                    <fullName>Dreamforce</fullName>
                </value>
                <value>
                    <fullName>Bee Colonies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQuestionCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Question Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Sequence__c</fullName>
        <description>Order in which the question should appear.</description>
        <label>Order Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for digigraph survey</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Question_ID__c</fullName>
        <description>Case Safe Record ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Question ID</label>
        <type>Text</type>
    </fields>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>Digigraph_Q_A</fullName>
        <active>true</active>
        <description>Questions and Answer options related to Digigrah Surveys</description>
        <label>Digigraph Q&amp;A</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digigraph_Question</fullName>
        <active>true</active>
        <description>Questions and Answer options related to Digigrah Surveys</description>
        <label>Digigraph Question</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>